polar2grid related catchups.
Signed-off-by: JC <jay@alaska.edu>

--- a/config/clavrx_rescale.ini
+++ b/config/clavrx_rescale.ini
@@ -527,6 +527,12 @@ method=linear
 min_in=0
 max_in=15240
 
+[rescale:cld_base_altitude_acha]
+product_name=cld_base_altitude_acha
+method=linear
+min_in=0
+max_in=15240
+
 [rescale:cloud_phase]
 product_name=cloud_phase
 method=raw
