--- a/config/scmi_backend.ini
+++ b/config/scmi_backend.ini
@@ -49,6 +49,11 @@ reader=clavrx
 product_name=cld_height_acha
 physical_element=CLAVR-x Cloud Top Height (ACHA)
 
+[scmi:clavrx:cld_height_base_acha]
+reader=clavrx
+product_name=cld_height_base_acha
+physical_element=CLAVR-x Cloud Base Height (ACHA)
+
 [scmi:clavrx:cloud_phase]
 reader=clavrx
 product_name=cloud_phase
