Rescale for clavrx

--- a/config/clavrx_rescale.ini
+++ b/config/clavrx_rescale.ini
@@ -531,6 +531,12 @@ max_in=15240
 product_name=cld_base_altitude_acha
 method=linear
 min_in=0
+max_in=50000
+
+[rescale:cld_height_base_acha]
+product_name=cld_height_base_acha
+method=linear
+min_in=0
 max_in=15240
 
 [rescale:cloud_phase]
