--- a/config/scmi_backend.ini
+++ b/config/scmi_backend.ini
@@ -636,6 +636,12 @@ reader=mirs
 product_name=tskin
 physical_element=MIRS Skin Temperature
 
+[scmi:mirs:sfr]
+reader=mirs
+product_name=sfr
+physical_element=MIRS SFR
+
+
 ; AMSR-2 L1B
 [scmi:amsr2:btemp_36.5h]
 product_name=btemp_36.5h
