--- a/config/awips_scmi.yml
+++ b/config/awips_scmi.yml
@@ -65,7 +65,7 @@ configs:
           grid: polar_alaska_1km
           bands:  "band1_vis band2_vis band3a_vis band3b_bt band4_bt band5_bt "
   mirs:
-    options: " --sector-id Polar --letters --compress --fix-awips --output-pattern 'UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{begin_time:%Y%m%d_%H%M}.nc' "
+    options: " --sector-id Polar --letters --compress --fix-awips --grid-coverage 0.00001 --output-pattern 'UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{begin_time:%Y%m%d_%H%M}.nc' "
     save:
      - "UAF_AII_*.nc"
     p2g_config: "scmi_backend.ini"
