Added sport limb bias stuff.
Signed-off-by: Jay C <jay@alaska.edu>

--- a/config/awips_scmi.yml
+++ b/config/awips_scmi.yml
@@ -10,10 +10,10 @@ configs:
      viirs_sdr: 
        ibands:
          grid: polar_alaska_300
-         bands:  "i01 i02 i03 i04 i05"
+         bands:  "i01 i02 i03 i04 i05 i_solar_zenith_angle i_sat_zenith_angle"
        mbands:
          grid: polar_alaska_700
-         bands: "m03 m04 m08 m09 m10 m11 m13 m14 m15 m16 dynamic_dnb dnb adaptive_dnb hncc_dnb"
+         bands: "m03 m04 m08 m09 m10 m11 m13 m14 m15 m16 dynamic_dnb dnb adaptive_dnb hncc_dnb m_solar_zenith_angle m_sat_zenith_angle"
      crefl:
        mbands:
          grid: polar_alaska_700
@@ -34,7 +34,7 @@ configs:
          bands: "vis03 vis04 vis05 vis06 vis07"
        km:
          grid: polar_alaska_1km
-         bands: "vis26 bt20 bt27 bt23 bt28 bt29 bt30 bt31 bt32"
+         bands: "vis26 bt20 bt27 bt23 bt28 bt29 bt30 bt31 bt32 satellite_zenith_angle solar_zenith_angle"
      crefl:
        qkm:
          grid: polar_alaska_250
