--- a/config/feeder_geotif.yml
+++ b/config/feeder_geotif.yml
@@ -65,36 +65,36 @@ configs:
      name: "npp.%Y%m%d.%H%M_i04_i02_i01"
   noaa20:
    mapper:
-     dnb: j01_viirs_dynamic_dnb_*_alaska_600.tif
-     i01: j01_viirs_i01*_alaska_300.tif
-     i02: j01_viirs_i02*_alaska_300.tif
-     i03: j01_viirs_i03*_alaska_300.tif
-     i04: j01_viirs_i04*_alaska_300.tif
-     i05: j01_viirs_i05*_alaska_300.tif
-     i01_float: j01_viirs_i01*_alaska_300.float.tif
-     i02_float: j01_viirs_i02*_alaska_300.float.tif
-     i03_float: j01_viirs_i03*_alaska_300.float.tif
-     i04_float: j01_viirs_i04*_alaska_300.float.tif
-     i05_float: j01_viirs_i05*_alaska_300.float.tif
-     m02: j01_viirs_m02_*_alaska_600.tif
-     m03: j01_viirs_m02_*_alaska_600.tif
-     m04: j01_viirs_m02_*_alaska_600.tif
-     m05: j01_viirs_m02_*_alaska_600.tif
-     m06: j01_viirs_m02_*_alaska_600.tif
-     m07: j01_viirs_m02_*_alaska_600.tif
-     m08: j01_viirs_m02_*_alaska_600.tif
-     m10: j01_viirs_m10_*_alaska_600.tif
-     m11: j01_viirs_m11_*_alaska_600.tif
-     m12: j01_viirs_m12_*_alaska_600.tif
-     m15: j01_viirs_m02_*_alaska_600.tif
-     m10_float: j01_viirs_m10_*_alaska_600.float.tif
-     m11_float: j01_viirs_m11_*_alaska_600.float.tif
-     m12_float: j01_viirs_m12_*_alaska_600.float.tif
-     true_color: j01_viirs_true_color_*_alaska_300.tif
-     crefl01: j01_viirs_viirs_crefl01_*_alaska_300.tif
-     crefl03: j01_viirs_viirs_crefl03_*_alaska_300.tif
-     crefl04: j01_viirs_viirs_crefl04_*_alaska_300.tif
-     crefl08: j01_viirs_viirs_crefl08_*_alaska_300.tif
+     dnb: noaa20_viirs_dynamic_dnb_*_alaska_600.tif
+     i01: noaa20_viirs_i01*_alaska_300.tif
+     i02: noaa20_viirs_i02*_alaska_300.tif
+     i03: noaa20_viirs_i03*_alaska_300.tif
+     i04: noaa20_viirs_i04*_alaska_300.tif
+     i05: noaa20_viirs_i05*_alaska_300.tif
+     i01_float: noaa20_viirs_i01*_alaska_300.float.tif
+     i02_float: noaa20_viirs_i02*_alaska_300.float.tif
+     i03_float: noaa20_viirs_i03*_alaska_300.float.tif
+     i04_float: noaa20_viirs_i04*_alaska_300.float.tif
+     i05_float: noaa20_viirs_i05*_alaska_300.float.tif
+     m02: noaa20_viirs_m02_*_alaska_600.tif
+     m03: noaa20_viirs_m02_*_alaska_600.tif
+     m04: noaa20_viirs_m02_*_alaska_600.tif
+     m05: noaa20_viirs_m02_*_alaska_600.tif
+     m06: noaa20_viirs_m02_*_alaska_600.tif
+     m07: noaa20_viirs_m02_*_alaska_600.tif
+     m08: noaa20_viirs_m02_*_alaska_600.tif
+     m10: noaa20_viirs_m10_*_alaska_600.tif
+     m11: noaa20_viirs_m11_*_alaska_600.tif
+     m12: noaa20_viirs_m12_*_alaska_600.tif
+     m15: noaa20_viirs_m02_*_alaska_600.tif
+     m10_float: noaa20_viirs_m10_*_alaska_600.float.tif
+     m11_float: noaa20_viirs_m11_*_alaska_600.float.tif
+     m12_float: noaa20_viirs_m12_*_alaska_600.float.tif
+     true_color: noaa20_viirs_true_color_*_alaska_300.tif
+     crefl01: noaa20_viirs_viirs_crefl01_*_alaska_300.tif
+     crefl03: noaa20_viirs_viirs_crefl03_*_alaska_300.tif
+     crefl04: noaa20_viirs_viirs_crefl04_*_alaska_300.tif
+     crefl08: noaa20_viirs_viirs_crefl08_*_alaska_300.tif
    single:
    - title: true_color
      band: true_color
