Additional changes required for it to actually work.
Signed-off-by: Jay C <jay@alaska.edu>

--- a/config/amsr2_level1.yml
+++ b/config/amsr2_level1.yml
@@ -1,7 +1,7 @@
 configs:
-  viirs:
+  amsr2:
    driver: "$AMSR2_HOME/singularity_run_amsr_level1.bash"
    options: " "
-   level_glob: "tp*.GCOM-W1.AMSR2.dat"
+   level0_glob: "tp*.GCOM-W1.AMSR2.dat"
 limits:
   processor: 1
