--- a/config/scmi_backend.ini
+++ b/config/scmi_backend.ini
@@ -641,27 +641,27 @@ reader=mirs
 product_name=sfr
 physical_element=MIRS SFR
 
-; AMSR-2 L1B
-[scmi:amsr2:btemp_36.5h]
-product_name=btemp_36.5h
-physical_element=36.5 GHz H
+#; AMSR-2 L1B
+#[scmi:amsr2:btemp_36.5h]
+#product_name=btemp_36.5h
+#physical_element=36.5 GHz H
 
-[scmi:amsr2:btemp_36.5v]
-product_name=btemp_36.5v
-physical_element=36.5 GHz V
+#[scmi:amsr2:btemp_36.5v]
+#product_name=btemp_36.5v
+#physical_element=36.5 GHz V
 
-[scmi:amsr2:btemp_89.0ah]
-product_name=btemp_89.0ah
-physical_element=89.0 GHz AH
+#[scmi:amsr2:btemp_89.0ah]
+#product_name=btemp_89.0ah
+#physical_element=89.0 GHz AH
 
-[scmi:amsr2:btemp_89.0av]
-product_name=btemp_89.0av
-physical_element=89.0 GHz AV
+#[scmi:amsr2:btemp_89.0av]
+#product_name=btemp_89.0av
+#physical_element=89.0 GHz AV
 
-[scmi:amsr2:btemp_89.0bh]
-product_name=btemp_89.0bh
-physical_element=89.0 GHz BH
+#[scmi:amsr2:btemp_89.0bh]
+#product_name=btemp_89.0bh
+#physical_element=89.0 GHz BH
 
-[scmi:amsr2:btemp_89.0bv]
-product_name=btemp_89.0bv
-physical_element=89.0 GHz BV
+#[scmi:amsr2:btemp_89.0bv]
+#product_name=btemp_89.0bv
+#physical_element=89.0 GHz BV
