--- a/config/p2g_geotif.yml
+++ b/config/p2g_geotif.yml
@@ -3,9 +3,9 @@ configs:
     p2g_args: "--tiled --compress DEFLATE"
     grid_file: "viirs_geotiff_grids.grd"
     tasks:
-     - "viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i03 i04 i05' -g alaska_300 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i03 i04 i05 m16' -g alaska_300 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
      - "viirs2gtiff.sh --grid-coverage 0.002 -p 'm02 m03 m04 m06 m07 m08 m10 m11 m12 m15 dnb' -g alaska_600 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
-     - "viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i03 i04 i05 ' -g alaska_300"
+     - "viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i03 i04 i05' -g alaska_300"
      - "viirs2gtiff.sh --grid-coverage 0.002 --png-quicklook -p  'm02 m03 m04 m05 m06 m07 m08 m10 m11 m12 m15 adaptive_dnb dynamic_dnb histogram_dnb' -g alaska_600"
      - "crefl2gtiff.sh --grid-coverage 0.002 --true-color -g alaska_300"
     save:
@@ -31,6 +31,15 @@ configs:
      - "polar2grid.sh avhrr gtiff -g 203_1k --grid-coverage 0.08 -p 'band1_vis band2_vis band3a_vis band3b_bt band4_bt band5_bt' "
     save:
      - "*.tif"
+  amsr2:
+    p2g_args: "--tiled --compress DEFLATE"
+    grid_file: "avhrr_geotiff_grids.grd"
+    rescale: "clavrx_rescale.ini"
+    tasks:
+     - "polar2grid.sh amsr2_l1b gtiff --grid-coverage 0.002 -g 203_10km -p 'rgb_color' "
+    save:
+     - "*.tif"
+     - "*.log"
   viirs_clavrx:
     p2g_args: "--tiled --compress DEFLATE"
     grid_file: "clavrx_geotiff_grids.grd"
@@ -38,6 +47,16 @@ configs:
     tasks:
      - "polar2grid.sh clavrx gtiff --grid-coverage 0.002 -g alaska_300 -p 'cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp cld_temp_acha cloud_phase cloud_type cld_base_altitude_acha ' "
      - "polar2grid.sh clavrx gtiff --grid-coverage 0.002 -g alaska_300 -p 'cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp cld_temp_acha cloud_phase cloud_type cld_base_altitude_acha ccl_layer_flag ccl_1 ccl_2 ccl_3 ccl_4 ccl_5' --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif "
+    save:
+     - "*.tif"
+     - "*.log"
+  avhrr_clavrx:
+    p2g_args: "--tiled --compress DEFLATE"
+    grid_file: "clavrx_geotiff_grids.grd"
+    rescale: "clavrx_rescale.ini"
+    tasks:
+     - "polar2grid.sh clavrx gtiff --grid-coverage 0.002 -g alaska_1000 -p 'cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp cld_temp_acha cloud_phase cloud_type cld_base_altitude_acha ' "
+     - "polar2grid.sh clavrx gtiff --grid-coverage 0.002 -g alaska_1000 -p 'cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp cld_temp_acha cloud_phase cloud_type cld_base_altitude_acha ccl_layer_flag ccl_1 ccl_2 ccl_3 ccl_4 ccl_5' --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif "
     save:
      - "*.tif"
      - "*.log"
