--- a/config/awips_scmi.yml
+++ b/config/awips_scmi.yml
@@ -53,6 +53,17 @@ configs:
        qkm:
          grid: polar_alaska_700
          bands:  "cld_emiss_acha cld_height_acha cld_opd_dcomp cld_reff_dcomp cld_temp_acha cloud_phase cloud_type cld_height_base_acha rain_rate"
+  acspo:
+   options: " --sector-id Polar --letters --compress --fix-awips --grid-coverage 0.0001 --output-pattern '{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{begin_time:%Y%m%d_%H%M}.nc' "
+   save:
+     - "*.nc"
+   p2g_config: "scmi_backend.ini"
+   p2g_grid: "scmi_grids.conf"
+   tasks:
+     acspo:
+       qkm:
+         grid: polar_alaska_500
+         bands:  "sst"
   avhrr:
     options: " --sector-id Polar --letters --compress --fix-awips --output-pattern 'UAF_AII_{satellite}_{instrument}_{product_name}_{sector_id}_{tile_id}_{begin_time:%Y%m%d_%H%M}.nc' "
     save:
