--- a/config/p2g_geotif.yml
+++ b/config/p2g_geotif.yml
@@ -3,9 +3,9 @@ configs:
     p2g_args: "--tiled --compress DEFLATE"
     grid_file: "viirs_geotiff_grids.grd"
     tasks:
-     - "viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i03 i04 i05 m16' -g alaska_300 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i03 i04 i05 m11 m12 m16' -g alaska_300 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
      - "viirs2gtiff.sh --grid-coverage 0.002 -p 'm02 m03 m04 m06 m07 m08 m10 m11 m12 m15 dnb' -g alaska_600 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
-     - "viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i03 i04 i05' -g alaska_300"
+     - "viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i03 i04 i05 m08' -g alaska_300"
      - "viirs2gtiff.sh --grid-coverage 0.002 --png-quicklook -p  'm02 m03 m04 m05 m06 m07 m08 m10 m11 m12 m15 adaptive_dnb dynamic_dnb histogram_dnb' -g alaska_600"
      - "crefl2gtiff.sh --grid-coverage 0.002 --true-color -g alaska_300"
     save:
