--- a/config/p2g_geotif.yml
+++ b/config/p2g_geotif.yml
@@ -11,6 +11,16 @@ configs:
     save:
      - "*.tif"
      - "npp_viirs_dynamic_dnb_*_alaska_600.png"
+  viirs_gm:
+    p2g_args: "--tiled --compress DEFLATE"
+    grid_file: "viirs_geotiff_grids.grd"
+    tasks:
+     - "viirs2gtiff.sh --grid-coverage 0.002 -p 'i01 i02 i04 ' -g alaska_gm_300 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "viirs2gtiff.sh --grid-coverage 0.002 -p 'm10 m11 m12 ' -g alaska_gm_600 --dtype real4 --output-pattern {satellite}_{instrument}_{product_name}_{begin_time}_{grid_name}.float.tif"
+     - "crefl2gtiff.sh --grid-coverage 0.002 --true-color -g alaska_gm_300"
+    save:
+     - "*.tif"
+     - "npp_viirs_dynamic_dnb_*_alaska_600.png"
   modis:
     p2g_args: "--tiled --compress DEFLATE"
     grid_file: "modis_geotiff_grids.grd"
