--- a/config/feeder_geotif.yml
+++ b/config/feeder_geotif.yml
@@ -157,6 +157,75 @@ configs:
        b: "i04_float"
      tool: "color_thermal_long_wave.rb"
      name: "npp.%Y%m%d.%H%M_i04_colored_gm"
+  snpp20gm:
+   mapper:
+     dnb: npp_viirs_dynamic_dnb_*_alaska_gm_600.tif
+     i01: npp_viirs_i01*_alaska_gm_300.tif
+     i02: npp_viirs_i02*_alaska_gm_300.tif
+     i03: npp_viirs_i03*_alaska_gm_300.tif
+     i04: npp_viirs_i04*_alaska_gm_300.tif
+     i05: npp_viirs_i05*_alaska_gm_300.tif
+     i01_float: npp_viirs_i01*_alaska_gm_300.float.tif
+     i02_float: npp_viirs_i02*_alaska_gm_300.float.tif
+     i03_float: npp_viirs_i03*_alaska_gm_300.float.tif
+     i04_float: npp_viirs_i04*_alaska_gm_300.float.tif
+     i05_float: npp_viirs_i05*_alaska_gm_300.float.tif
+     m02: npp_viirs_m02_*_alaska_gm_600.tif
+     m03: npp_viirs_m02_*_alaska_gm_600.tif
+     m04: npp_viirs_m02_*_alaska_gm_600.tif
+     m05: npp_viirs_m02_*_alaska_gm_600.tif
+     m06: npp_viirs_m02_*_alaska_gm_600.tif
+     m07: npp_viirs_m02_*_alaska_gm_600.tif
+     m08: npp_viirs_m02_*_alaska_gm_600.tif
+     m10: npp_viirs_m10_*_alaska_gm_600.tif
+     m11: npp_viirs_m11_*_alaska_gm_600.tif
+     m12: npp_viirs_m12_*_alaska_gm_600.tif
+     m15: npp_viirs_m02_*_alaska_gm_600.tif
+     m10_float: npp_viirs_m10_*_alaska_gm_600.float.tif
+     m11_float: npp_viirs_m11_*_alaska_gm_600.float.tif
+     m12_float: npp_viirs_m12_*_alaska_gm_600.float.tif
+     m11_300_float: npp_viirs_m11_*_alaska_gm_300.float.tif
+     m12_300_float: npp_viirs_m12_*_alaska_gm_300.float.tif
+     m16_300_float: npp_viirs_m16_*_alaska_gm_300.float.tif
+     m08_300: npp_viirs_m08_*_alaska_gm_300.tif
+     true_color: npp_viirs_true_color_*_alaska_gm_300.tif
+     crefl01: npp_viirs_viirs_crefl01_*_alaska_gm_300.tif
+     crefl03: npp_viirs_viirs_crefl03_*_alaska_gm_300.tif
+     crefl04: npp_viirs_viirs_crefl04_*_alaska_gm_300.tif
+     crefl08: npp_viirs_viirs_crefl08_*_alaska_gm_300.tif
+   single:
+   - title: true_color
+     band: true_color
+     name: "npp.%Y%m%d.%H%M_true_color_gm"
+   combinations:
+   - title: landcolor
+     bands:
+       r: "i03"
+       g: "i02"
+       b: "i01"
+     name: "npp.%Y%m%d.%H%M_I03_I02_I01_gm"
+   extras:
+   - title: viirs_fire_temperature
+     bands:
+       r: "m12_float"
+       g: "m11_float"
+       b: "m10_float"
+     tool: "viirs_fire_stretch --blue-cap 0.75 "
+     name: "npp.%Y%m%d.%H%M_m12_m11_m10_gm"
+   - title: viirs_fire_color
+     bands:
+       r: "i04_float"
+       g: "i02_float"
+       b: "i01_float"
+     tool: "viirs_fire_stretch --blue-cap 1.0 "
+     name: "npp.%Y%m%d.%H%M_i04_i02_i01_gm"
+   - title: viirs_i5_colored
+     bands:
+       r: "i04_float"
+       g: "i04_float"
+       b: "i04_float"
+     tool: "color_thermal_long_wave.rb"
+     name: "npp.%Y%m%d.%H%M_i04_colored_gm"
   noaa20:
    mapper:
      dnb: noaa20_viirs_dynamic_dnb_*_alaska_600.tif
@@ -602,5 +671,144 @@ configs:
        b: "sst_terra"
      tool: "colorize.rb -c sst.k.cmap "
      name: "terra-1.%Y%m%d.%H%M_rgb_sst"
+  noaa20polar:
+   mapper:
+     dnb: noaa20_viirs_dynamic_dnb_*_polar_600.tif
+     i01: noaa20_viirs_i01*_polar_300.tif
+     i02: noaa20_viirs_i02*_polar_300.tif
+     i03: noaa20_viirs_i03*_polar_300.tif
+     i04: noaa20_viirs_i04*_polar_300.tif
+     i05: noaa20_viirs_i05*_polar_300.tif
+     i01_float: noaa20_viirs_i01*_polar_300.float.tif
+     i02_float: noaa20_viirs_i02*_polar_300.float.tif
+     i03_float: noaa20_viirs_i03*_polar_300.float.tif
+     i04_float: noaa20_viirs_i04*_polar_300.float.tif
+     i05_float: noaa20_viirs_i05*_polar_300.float.tif
+     m02: noaa20_viirs_m02_*_polar_600.tif
+     m03: noaa20_viirs_m02_*_polar_600.tif
+     m04: noaa20_viirs_m02_*_polar_600.tif
+     m05: noaa20_viirs_m02_*_polar_600.tif
+     m06: noaa20_viirs_m02_*_polar_600.tif
+     m07: noaa20_viirs_m02_*_polar_600.tif
+     m08: noaa20_viirs_m02_*_polar_600.tif
+     m10: noaa20_viirs_m10_*_polar_600.tif
+     m11: noaa20_viirs_m11_*_polar_600.tif
+     m12: noaa20_viirs_m12_*_polar_600.tif
+     m15: noaa20_viirs_m02_*_polar_600.tif
+     m16_300_float: noaa20_viirs_m16_*_polar_300.float.tif
+     m10_float: noaa20_viirs_m10_*_polar_600.float.tif
+     m11_float: noaa20_viirs_m11_*_polar_600.float.tif
+     m12_float: noaa20_viirs_m12_*_polar_600.float.tif
+     m11_300_float: noaa20_viirs_m11_*_polar_300.float.tif
+     m12_300_float: noaa20_viirs_m12_*_polar_300.float.tif
+     m08_300: noaa20_viirs_m08_*_polar_300.tif
+     true_color: noaa20_viirs_true_color_*_polar_300.tif
+     crefl01: noaa20_viirs_viirs_crefl01_*_polar_300.tif
+     crefl03: noaa20_viirs_viirs_crefl03_*_polar_300.tif
+     crefl04: noaa20_viirs_viirs_crefl04_*_polar_300.tif
+     crefl08: noaa20_viirs_viirs_crefl08_*_polar_300.tif
+   single:
+   - title: true_color
+     band: true_color
+     name: "noaa20.%Y%m%d.%H%M_true_color_gm"
+   combinations:
+   - title: landcolor
+     bands:
+       r: "i03"
+       g: "i02"
+       b: "i01"
+     name: "noaa20.%Y%m%d.%H%M_I03_I02_I01_gm"
+   extras:
+   - title: viirs_fire_temperature
+     bands:
+       r: "m12_float"
+       g: "m11_float"
+       b: "m10_float"
+     tool: "viirs_fire_stretch --blue-cap 0.75 "
+     name: "noaa20.%Y%m%d.%H%M_m12_m11_m10_gm"
+   - title: viirs_fire_color
+     bands:
+       r: "i04_float"
+       g: "i02_float"
+       b: "i01_float"
+     tool: "viirs_fire_stretch --blue-cap 1.0 "
+     name: "noaa20.%Y%m%d.%H%M_i04_i02_i01_gm"
+   - title: viirs_i4_colored
+     bands:
+       r: "i04_float"
+       g: "i04_float"
+       b: "i04_float"
+     tool: "color_thermal_long_wave.rb"
+     name: "noaa20.%Y%m%d.%H%M_i04_colored_gm"
+  snpp20polar:
+   mapper:
+     dnb: npp_viirs_dynamic_dnb_*_polar_600.tif
+     i01: npp_viirs_i01*_polar_300.tif
+     i02: npp_viirs_i02*_polar_300.tif
+     i03: npp_viirs_i03*_polar_300.tif
+     i04: npp_viirs_i04*_polar_300.tif
+     i05: npp_viirs_i05*_polar_300.tif
+     i01_float: npp_viirs_i01*_polar_300.float.tif
+     i02_float: npp_viirs_i02*_polar_300.float.tif
+     i03_float: npp_viirs_i03*_polar_300.float.tif
+     i04_float: npp_viirs_i04*_polar_300.float.tif
+     i05_float: npp_viirs_i05*_polar_300.float.tif
+     m02: npp_viirs_m02_*_polar_600.tif
+     m03: npp_viirs_m02_*_polar_600.tif
+     m04: npp_viirs_m02_*_polar_600.tif
+     m05: npp_viirs_m02_*_polar_600.tif
+     m06: npp_viirs_m02_*_polar_600.tif
+     m07: npp_viirs_m02_*_polar_600.tif
+     m08: npp_viirs_m02_*_polar_600.tif
+     m10: npp_viirs_m10_*_polar_600.tif
+     m11: npp_viirs_m11_*_polar_600.tif
+     m12: npp_viirs_m12_*_polar_600.tif
+     m15: npp_viirs_m02_*_polar_600.tif
+     m10_float: npp_viirs_m10_*_polar_600.float.tif
+     m11_float: npp_viirs_m11_*_polar_600.float.tif
+     m12_float: npp_viirs_m12_*_polar_600.float.tif
+     m11_300_float: npp_viirs_m11_*_polar_300.float.tif
+     m12_300_float: npp_viirs_m12_*_polar_300.float.tif
+     m16_300_float: npp_viirs_m16_*_polar_300.float.tif
+     m08_300: npp_viirs_m08_*_polar_300.tif
+     true_color: npp_viirs_true_color_*_polar_300.tif
+     crefl01: npp_viirs_viirs_crefl01_*_polar_300.tif
+     crefl03: npp_viirs_viirs_crefl03_*_polar_300.tif
+     crefl04: npp_viirs_viirs_crefl04_*_polar_300.tif
+     crefl08: npp_viirs_viirs_crefl08_*_polar_300.tif
+   single:
+   - title: true_color
+     band: true_color
+     name: "npp.%Y%m%d.%H%M_true_color_gm"
+   combinations:
+   - title: landcolor
+     bands:
+       r: "i03"
+       g: "i02"
+       b: "i01"
+     name: "npp.%Y%m%d.%H%M_I03_I02_I01_gm"
+   extras:
+   - title: viirs_fire_temperature
+     bands:
+       r: "m12_float"
+       g: "m11_float"
+       b: "m10_float"
+     tool: "viirs_fire_stretch --blue-cap 0.75 "
+     name: "npp.%Y%m%d.%H%M_m12_m11_m10_gm"
+   - title: viirs_fire_color
+     bands:
+       r: "i04_float"
+       g: "i02_float"
+       b: "i01_float"
+     tool: "viirs_fire_stretch --blue-cap 1.0 "
+     name: "npp.%Y%m%d.%H%M_i04_i02_i01_gm"
+   - title: viirs_i5_colored
+     bands:
+       r: "i04_float"
+       g: "i04_float"
+       b: "i04_float"
+     tool: "color_thermal_long_wave.rb"
+     name: "npp.%Y%m%d.%H%M_i04_colored_gm"
 limits:
   processor: 1
+
